[package]
name = "pqckeys"
version = "0.1.1"
description = """
Pure Rust implementation of key formats for various post quantum cryptographic algorithms.
"""
categories = ["cryptography", "data-structures", "encoding", "no-std", "pqc"]
keywords = ["crypto"]
readme = "README.md"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
const-oid = { version = "0.10.2", features = ["db"] }
der = { version = "0.8.0", features = ["oid", "derive", "alloc"] }
spki = { version = "0.8.0-rc.4", features = ["alloc"] }
x509-cert = { version = "0.3.0-rc.4", default-features = false }

flagset = { version = "0.4.7" }

hex-literal = "1.0.0"

[features]
alloc = ["der/alloc"]
std = ["der/std", "spki/std"]
pem = ["alloc", "der/pem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[patch.crates-io]
x509-cert  = { git = "https://github.com/RustCrypto/formats.git" }